# PolyphonicMidiTracker_Rust

./: Cargo.toml  build.sh  codebase.md
src/: fft_processor.rs  learning.rs  lib.rs  midi_output.rs  note_detection.rs  spectral_analysis.rs  tracking.rs  utils.rs
src/ui/: mod.rs
xtask/: Cargo.toml
